# DataToCpp

./: .gitignore  CMakeLists.txt  README.md
data2cpp/binary/: binary2cpp.cc  binary2cpp.hh
data2cpp/common/: data2cpp.cc  data2cpp.hh
data2cpp/parquet/: parquet2cpp.cc  parquet2cpp.hh
data2cpp/vecs/: vecs2cpp.cc  vecs2cpp.hh
examples/: CMakeLists.txt  binary2cpp_test.cc  parquet2cpp_test.cc  vecs2cpp_test.cc
